--- a/Login/Login/MainWindow.xaml
+++ b/Login/Login/MainWindow.xaml
@@ -1,29 +1,63 @@
 ﻿<Window x:Class="Login.MainWindow"
+        WindowStyle="None"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <StackPanel>
-        <StackPanel Orientation="Horizontal">
-            <TextBox Height="23"
-                     TextWrapping="Wrap"
-                     Text="" 
-                     Width="200"
-                     />
-            <TextBlock TextWrapping="Wrap"
-                       Text=": نام کاربری " />
+        Title="MainWindow"
+        Height="550"
+        Width="550"
+        WindowStartupLocation="CenterScreen">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="477*" />
+            <ColumnDefinition Width="65*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="49*" />
+            <RowDefinition Height="493*" />
+        </Grid.RowDefinitions>
 
+        <Button Grid.Row="0"
+                Content="خروج"
+                Grid.Column="1"
+                BorderThickness="0"
+                Background="White"
+                Margin="10" />
+
+        <StackPanel VerticalAlignment="Center"
+                    HorizontalAlignment="Center"
+                    Margin="126,191,93,210"
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="1"
+                    Height="92"
+                    Width="258">
+            <StackPanel Orientation="Horizontal">
+                <StackPanel Orientation="Vertical"
+                            Margin="0,0,10,0"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center">
+                    <TextBlock TextWrapping="Wrap"
+                               Text="نام کاربری"
+                               TextAlignment="Right"
+                               Margin="0,0,0,10" />
+                    <TextBlock TextWrapping="Wrap"
+                               Text="رمز عبور"
+                               TextAlignment="Right" />
+                </StackPanel>
+                <StackPanel Orientation="Vertical">
+
+                    <TextBox Height="23"
+                             TextWrapping="Wrap"
+                             Text=""
+                             Width="200"
+                             Margin="0,0,0,10" />
+                    <PasswordBox Width="200" />
+
+                </StackPanel>
+            </StackPanel>
+            <Button IsCancel="True"
+                    Content="ورود"
+                    Margin="60,20,0,0" />
         </StackPanel>
-        <StackPanel Orientation="Horizontal">
-            <TextBox Height="23"
-                     TextWrapping="Wrap"
-                     Text=""
-                     Width="200" />
-            <TextBlock TextWrapping="Wrap"
-                       Text=": رمز عبور  " />
-
-        </StackPanel>
-        <Button IsCancel="True"
-                Content="ورود" />
-
-    </StackPanel>
+    </Grid>
 </Window>
