--- a/Login/Login/MainWindow.xaml
+++ b/Login/Login/MainWindow.xaml
@@ -7,71 +7,6 @@
         Width="550"
         WindowStartupLocation="CenterScreen">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="3*" />
-            <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="1*" />
-
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
-
-</Grid.RowDefinitions>
-
-        <TextBlock TextWrapping="Wrap"
-                   Text="رمز عبور"
-                   TextAlignment="Right" 
-                   Grid.Row="5"
-                   Grid.Column="1"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center" />
-        <TextBlock TextWrapping="Wrap"
-                   Text="نام کاربری"
-                   TextAlignment="Right"
-                   Grid.Row="4"
-                   Grid.Column="1"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
-
-        <TextBox 
-                 TextWrapping="Wrap"
-                 Text=""
-                 Width="200"
-                 Grid.Row="4"
-                 Grid.Column="2"
-                 HorizontalAlignment="Center"
-                 VerticalAlignment="Center" />
-        <PasswordBox Width="200"
-                     Grid.Row="5"
-                     Grid.Column="2"
-                     VerticalAlignment="Center"
-                     HorizontalAlignment="Center" />
-
-        <Button IsCancel="True"
-                Content="ورود"
-                Grid.Row="6"
-                Grid.Column="2"
-                Width="200"
-                VerticalAlignment="Center" />
-
-        <Button Grid.Row="0"
-                Grid.Column="4"
-                Content="خروج"
-                BorderThickness="0"
-                Background="White"
-                />
-
-        
+        <Frame x:Name="Main"/>
     </Grid>
 </Window>
