--- a/Login/Login/home_page.xaml
+++ b/Login/Login/home_page.xaml
@@ -1,13 +1,31 @@
 ﻿<UserControl x:Class="Login.home_page"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
+             d:DesignHeight="300"
+             d:DesignWidth="300">
     <Grid>
-            <TextBlock
-                Text="home page"
-                />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="15*" />
+        </Grid.RowDefinitions>
+        <Menu Grid.Row="0"
+              Background="#FFECECEC">
+            <MenuItem Header="_File">
+                <MenuItem Header="_change password"
+                          Click="ButtonBase_OnClick"/>
+                <MenuItem Header="_logout"
+                          Click="Logout_OnClick" />
+            </MenuItem>
+        </Menu>
+
+        <TextBlock Text="Main window" Grid.Row="1"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Center"
+                   FontSize="40" />
+
+       
     </Grid>
 </UserControl>
