--- a/Login/Login/Login_page.xaml
+++ b/Login/Login/Login_page.xaml
@@ -1,81 +1,98 @@
 ﻿<UserControl x:Class="Login.login_page"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300"
-             Width="550"
-             Height="400">
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+             mc:Ignorable="d"
+             Height="350"
+             Width="300"
+             FontSize="8">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="3*" />
-            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="13*" />
             <ColumnDefinition Width="1*" />
 
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+
+            <RowDefinition Height="1*" />
+
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+
             <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
+
             <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
 
         </Grid.RowDefinitions>
 
-        <TextBlock TextWrapping="Wrap"
-                   Text="رمز عبور"
-                   TextAlignment="Right"
-                   Grid.Row="5"
-                   Grid.Column="1"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center" />
-        <TextBlock TextWrapping="Wrap"
-                   Text="نام کاربری"
-                   TextAlignment="Right"
-                   Grid.Row="4"
-                   Grid.Column="1"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
-
+        
         <TextBox x:Name="username"
+                 mah:TextBoxHelper.ClearTextButton="True"
+        mah:TextBoxHelper.Watermark="نام کاربری"
                  TextWrapping="Wrap"
                  Text=""
-                 Width="200"
-                 Grid.Row="4"
-                 Grid.Column="2"
-                 HorizontalAlignment="Center"
-                 VerticalAlignment="Center" />
+                 Grid.Row="6"
+                 Grid.Column="1"
+                 TextChanged="Username_OnTextChanged"
+                 BorderThickness="2"
+                 Margin="3"
+                 />
+
         <PasswordBox x:Name="password"
-                     Width="200"
-                     Grid.Row="5"
-                     Grid.Column="2"
-                     VerticalAlignment="Center"
-                     HorizontalAlignment="Center" />
+                     mah:TextBoxHelper.ClearTextButton="True"
+                     mah:TextBoxHelper.Watermark="رمز عبور"
+                     Style="{StaticResource MetroButtonRevealedPasswordBox}"
+                     Grid.Row="7"
+                     Grid.Column="1"
+                     PasswordChanged="Password_OnPasswordChanged"
+                     BorderThickness="2" 
+                     Margin="3"
+                     />
+
+        <TextBlock x:Name="incorrect"
+                   Text="رمز عبور یا نام کاربری اشتباه است"
+                   Grid.Row="9"
+                   Grid.Column="1"
+                   Foreground="#FFF01F1F"
+                   Visibility="Hidden"
+                   TextAlignment="Center"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Center"
+                   FontSize="12"
+                   Height="16"
+                   
+                   Width="164" />
 
         <Button x:Name="submit"
                 IsCancel="True"
                 Content="ورود"
-                Grid.Row="6"
-                Grid.Column="2"
-                Width="200"
-                VerticalAlignment="Center"
-                Click="Submit_OnClick" />
-
-        <Button x:Name="close"
-                Grid.Row="0"
-                Grid.Column="4"
-                Content="خروج"
-                BorderThickness="0"
-                Background="White"
-                Click="Close_OnClick" />
+                Grid.Row="8"
+                Grid.Column="1"
+                Click="Submit_OnClick"
+                
+                Style="{DynamicResource AccentedSquareButtonStyle}"
+               
+                FontSize="12"
+                BorderBrush="White"
+                />
+        <Image Grid.Column="0"
+               Grid.Row="0"
+               HorizontalAlignment="Center"
+               Height="106"
+               Grid.RowSpan="6"
+               Grid.ColumnSpan="3"
+               VerticalAlignment="Center"
+               Width="119"
+               Source="images.png" />
 
     </Grid>
 </UserControl>
