--- a/Login/Login/MainWindow.xaml
+++ b/Login/Login/MainWindow.xaml
@@ -1,12 +1,17 @@
-﻿<Window x:Class="Login.MainWindow"
+﻿<Controls:MetroWindow  x:Class="Login.MainWindow"
         WindowStyle="None"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow"
-        Height="400"
-        Width="550"
-        WindowStartupLocation="CenterScreen">
+        Title="پارسیوت"
+        Height="350"
+        Width="300"
+        WindowStartupLocation="CenterScreen"
+                       BorderBrush="Black"
+                       BorderThickness="1">
     <Grid>
-        <Frame x:Name="Main" NavigationUIVisibility="Hidden"/>
+        <Frame x:Name="Main" NavigationUIVisibility="Hidden"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center" />
     </Grid>
-</Window>
+</Controls:MetroWindow>
