--- a/Login/Login/home_page.xaml
+++ b/Login/Login/home_page.xaml
@@ -4,27 +4,31 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="300"
-             d:DesignWidth="300">
+
+             Width="300"
+             Height="350">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="15*" />
+            <RowDefinition Height="8*" />
+            <RowDefinition Height="67*" />
         </Grid.RowDefinitions>
         <Menu Grid.Row="0"
-              Background="#FFECECEC">
+              Background="#FFECECEC"
+              VerticalAlignment="Top">
             <MenuItem Header="_File">
                 <MenuItem Header="_change password"
-                          Click="ButtonBase_OnClick"/>
+                          Click="ButtonBase_OnClick" />
                 <MenuItem Header="_logout"
                           Click="Logout_OnClick" />
             </MenuItem>
         </Menu>
 
-        <TextBlock Text="Main window" Grid.Row="1"
+        <TextBlock Text="Main window"
+                   Grid.Row="1"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
-                   FontSize="40" />
+                   FontSize="40"
+                   />
 
     </Grid>
 </UserControl>
